"Added Password_Reset/Change"

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,7 @@
 <h2>Log In</h2>
 <form method="post">{% csrf_token %}
 {{ form.as_p }}
+<a href="{% url 'password_reset' %}">Password Reset</a>
 <button type="submit">Log In</button>
 </form>
 
