--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,10 @@
     {% if user.is_authenticated %}
         Hi {{ user.username }}!.
         <p><a href="{% url 'logout' %}">Log Out</a></p>
+        <p><a href="{% url 'password_change' %}">Password Change</a></p>
     {% else %}
         <p>You are not logged in</p>
+        <br>
         <a href="{% url 'login' %}">Log In</a>
     {% endif %}
 </div>
