--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,13 @@
-<!-- templates/registration/login.html -->
-{% extends 'base.html' %}
-{% block title %}Log In{% endblock title %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!-- templates/registration/login.html -->
 
 <h2>Log In</h2>
 <form method="post">{% csrf_token %}
@@ -10,4 +16,7 @@
 <button type="submit">Log In</button>
 </form>
 
-{% endblock content %}
+
+    
+</body>
+</html>
